[package]
name = "rascii_art"
version = "0.4.6"
authors = [ "UTFeight", "RGBCube", "Stattek" ]
description = "Advanced ASCII Art Generator. Fork for imgii."
repository = "https://github.com/Stattek/RASCII"
keywords = [ "ascii" ]
license = "MIT"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.31", features = ["derive"] }
image = "0.25.5"
unicode-segmentation = "1.12.0"


[[bin]]
name = "rascii"
path = "src/main.rs"

[profile.release]
strip = true
